--- a/angular-app/mobgent/angular.json
+++ b/angular-app/mobgent/angular.json
@@ -17,7 +17,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/mobgent",
+            "outputPath": "../docs",
+            "baseHref": "/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
